<?xml version="1.0"?>
<package format="3">
  <name>ixblue_ins_msgs</name>
  <version>0.2.0</version>
  <description>The ixblue INS defined messages package</description>

  <maintainer email="adrien.barral@ixblue.com">Adrien BARRAL</maintainer>
  <maintainer email="romain.reignier@ixblue.com">Romain REIGNIER</maintainer>
  <maintainer email="alaa@forssea-robotics.fr">Alaa EL JAWAD</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/ixblue_ins_msgs</url>

  <author email="adrien.barral@ixblue.com">Adrien BARRAL</author>
  <author email="laure.le-breton@ixblue.com">Laure LE BRETON</author>
  <author email="alaa@forssea-robotics.fr">Alaa EL JAWAD</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>ament_package</build_depend>
  <build_depend>rosidl_adapter</build_depend>
  <build_depend>rosidl_default_runtime</build_depend>
  <build_depend>rosidl_parser</build_depend>

  <depend>rpyutils</depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
